hello-go-ss.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: hello-go
spec:
  selector:
    matchLabels:
      app: hello-go # has to match .spec.template.metadata.labels
  serviceName: hello-go
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-go
    spec:
      containers:
      - name: hello-go
        image: gcr.io/cloud-tools-201201/hello-go
        ports:
        - containerPort: 80
          name: primary
        volumeMounts:
        - name: hello-go-pv
          mountPath: /etc
  volumeClaimTemplates:
  - metadata:
      name: hello-go-pv
      annotations:
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
