kaniko-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kaniko-hello-go
spec:
  containers:
  - name: kaniko
    image: gcr.io/kaniko-project/executor:latest
    args: ["--dockerfile=Dockerfile",
            "--bucket=hello-go-contexts",
            "--destination=gcr.io/gcp-demo-200100/hello-go:latest"]
    volumeMounts:
      - name: kaniko-secret
        mountPath: /secret
  restartPolicy: Never
  volumes:
    - name: kaniko-secret
      secret:
        secretName: kaniko-secret
