hello-go-svc-ilb.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-go-svc-ilb
  annotations:
    cloud.google.com/load-balancer-type: 'Internal'
spec:
  selector:
    app: hello-go
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
