hello-go-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-go-svc
spec:
  selector:
    app: hello-go
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
