hello-go-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-go-ingress
spec:
  backend:
    serviceName: hello-go-svc
    servicePort: 80
