hello-go-np-test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hello-go-np-test
spec:
  podSelector:
    matchLabels:
      app: hello-go
  ingress:
  - from:
      - podSelector:
          matchLabels:
              pod: krb
